--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <header>
         <div class="row no-gutters">
-            <a href="index.html" class="col-md-4 logo">
+            <a href="02-index.html" class="col-md-4 logo">
             </a>
 
             <div class="col-md-8">
@@ -32,7 +32,7 @@
                 </div>
                 <div class="row no-gutters">
                     <div class="col">
-                        <ul id="nav" class="list-inline menucontainer">
+                        <ul id="nav" class="list-inline menucontainer row">
                             <li class="col-xs-6 col-sm-2 ui-menu-color-home menuitem">
                                 <a href="index.html" class="hvr-sweep-to-bottom"><i class="fa fa-home"
                                         aria-hidden="true"></i><span>Home</span></a>
