--- a/interests.html
+++ b/interests.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="row no-gutters">
                     <div class="col">
-                        <ul id="nav" class="list-inline menucontainer">
+                        <ul id="nav" class="row list-inline menucontainer">
                             <li class="col-6 col-sm-2 ui-menu-color-home menuitem">
                                 <a href="index.html" class="hvr-sweep-to-bottom"><i class="fa fa-home"
                                         aria-hidden="true"></i><span>Home</span></a>
@@ -212,6 +212,11 @@
             </div>
         </div>
     </footer>
+
+
+    <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
+    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBGXhUcBmPz_3C0Ixk8z_shFfhy1pGNHXE&callback=initMap"></script>
+    <script src="assets/js/maps.js"></script>
 </body>
 
 </html>
