--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,15 @@
 
 
     <title>Stefan</title>
+
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+</script>
+<script type="text/javascript">
+   (function(){
+      emailjs.init("rvap8gZoKMz2vlV8Q");
+   })();
+</script>
 </head>
 
 <body>
