--- a/contact.html
+++ b/contact.html
@@ -10,19 +10,19 @@
     <script src="https://kit.fontawesome.com/87e547263b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css"
         type="text/css" />
+        <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/style/style.css" type="text/css">
 
 
     <title>Stefan</title>
 
-    <script type="text/javascript"
-        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
-</script>
-<script type="text/javascript">
-   (function(){
-      emailjs.init("rvap8gZoKMz2vlV8Q");
-   })();
-</script>
+    <script type="text/javascript" src="https://cdn.emailjs.com/sdk/2.2.4/email.min.js"></script>
+    <script type="text/javascript">
+        (function() {
+            emailjs.init("kU3eSczB4VbXmmmky");
+            
+        })();
+    </script>
 </head>
 
 <body>
@@ -79,7 +79,7 @@
                 <h5 class="uppercase text-center">Let's work together</h5>
 
                 <div class="center-form">
-                  <form>
+                  <form onsubmit="return sendMail(this);">
                     <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required>
                     <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required>
                     <textarea rows="5" name="projectsummary" id="projectsummary" class="form-control" placeholder="Project description"></textarea>
@@ -158,6 +158,7 @@
             </div>
         </div>
     </footer>
+    <script src="assets/js/sendEmail.js"></script>
 </body>
 
 </html>
