translate all documents to German

--- a/interests.html
+++ b/interests.html
@@ -39,21 +39,23 @@
                             </li>
                             <li class="col-6 col-sm-2 ui-menu-color-resume menuitem">
                                 <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap"
-                                        aria-hidden="true"></i><span>Resume</span></a>
+                                        aria-hidden="true"></i><span>Resümee</span></a>
                             </li>
                             <li class="col-6 col-sm-2 ui-menu-color-contact menuitem">
                                 <a href="contact.html" class="hvr-sweep-to-bottom"><i class="fa fa-comment-o"
-                                        aria-hidden="true"></i><span>Contact</span></a>
+                                        aria-hidden="true"></i><span>Kontakt</span></a>
                             </li>
                             <li class="col-6 col-sm-2 ui-menu-color-interests menuitem">
-                                <a href="interests.html" class="hvr-sweep-to-bottom"><i class="fa fa-users" aria-hidden="true"></i><span>Interests</span></a>
+                                <a href="interests.html" class="hvr-sweep-to-bottom"><i class="fa fa-users"
+                                        aria-hidden="true"></i><span>Ausbildung</span></a>
                             </li>
                             <li class="col-6 col-sm-2 ui-menu-color-github menuitem">
-                                <a href="github.html" class="hvr-sweep-to-bottom"><i class="fa fa-github" aria-hidden="true"></i><span>GitHub</span></a>
+                                <a href="github.html" class="hvr-sweep-to-bottom"><i class="fa fa-github"
+                                        aria-hidden="true"></i><span>GitHub</span></a>
                             </li>
                             <li class="col-6 col-sm-2 ui-menu-color-download menuitem">
-                                <a href="assets/cv/sample-cv.pdf" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-download"
-                                        aria-hidden="true"></i><span>Download</span></a>
+                                <a href="assets/cv/sample-cv.pdf" target="_blank" class="hvr-sweep-to-bottom"><i
+                                        class="fa fa-download" aria-hidden="true"></i><span>Download</span></a>
                             </li>
 
                         </ul>
@@ -70,8 +72,15 @@
                 <div class="row">
                     <div class="col-12">
                         <h3 class="section-heading uppercase">
-                            Conferences And Meetups Attended
+                            Zusätzliche Ausbildung im Bereich Webentwicklung
                         </h3>
+                        <h4>UX User Experience und Design Thinking</h4>
+                        <br>
+                        <h4>Automatisierung mit ZAP</h4>
+                        <br>
+                        <h4>Prinzipien agiler Softwareentwicklung</h4>
+                        <br>
+                        <h4>Arbeiten mit Google API</h4>
                     </div>
                 </div>
                 <div id="map"></div>
@@ -79,21 +88,26 @@
             <div class="col-md-8 bg-color-groups">
                 <div class="row">
                     <div class="col">
-                        <h3 class="section-heading uppercase">My Groups And Societies</h3>
+                        <h3 class="section-heading uppercase">Ausbildung als Fullstack Entwickler</h3>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
                         <div class="row">
                             <div class="col-2">
-                                <i class="three-reasons-icon fa fa-users" aria-hidden="true"></i>
+                                <i class="three-reasons-icon fa-brands fa-html5" aria-hidden="true"></i>
+                                <i class="three-reasons-icon fa-brands fa-css3-alt" aria-hidden="true"></i>
                             </div>
                             <div class="col-10">
-                                <h4 class="three-reasons-heading uppercase">Coding Grace</h4>
+                                <h4 class="three-reasons-heading uppercase">HTML5 und CSS3</h4>
                                 <p>
-                                    Coding Grace are a group of developers based in Ireland who love to code and do other geeky and not necessarily crafty activities. Some of us code full-time, or just for fun (or both). We have people who are part of other technical user groups such as
-                                    Dublin ALT.NET, GameCraft, Python Ireland, Ruby Ireland and more.
-                                    <a href="https://codinggrace.com/" target="_blank">Coding Grace</a>
+
+                                    Alle module im Rahmen der Ausbildung als Fullstack Entwickler bei Code Institute.
+                                    Das beinhaltet auch semantic web, Medien Elemente, Accesibility, responsive Design
+                                    , CSS Selektoren, Positionierung der Elemente, Z-Index und interaktives Layout.
+                                    <br>
+                                    Abschlussprojekt: <a href="https://23052015.github.io/english-bulldogs-fanpage/"
+                                        target="_blank">We love English Bulldogs</a>
                                 </p>
                             </div>
                         </div>
@@ -101,14 +115,20 @@
                     <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
                         <div class="row">
                             <div class="col-2">
-                                <i class="three-reasons-icon fa fa-users" aria-hidden="true"></i>
+                                <i class="three-reasons-icon fa-brands fa-js" aria-hidden="true"></i>
                             </div>
                             <div class="col-10">
-                                <h4 class="three-reasons-heading uppercase">Django Girls</h4>
+                                <h4 class="three-reasons-heading uppercase">JS und DOM</h4>
                                 <p>
-                                    Django Girls is a non-profit organization and a community that empowers and helps women to organize free, one-day programming workshops by providing tools, resources and support. We are a volunteer run organization with hundreds of people contributing
-                                    to bring more amazing women into the world of technology.
-                                    <a href="https://djangogirls.org/" target="_blank">Django Girls</a>
+
+                                    Alle module im Rahmen der Ausbildung als Fullstack Entwickler bei Code Institute.
+                                    Dazu gehören Iterationen, Funktionen und Objekte, flow control und Datenstruktur.
+                                    Die dazugehörige JS Bibliothek jquery habe ich ebenso ausführlich kennengelernt.
+                                    <br>
+
+                                    Abschlussprojekt: <a
+                                        href="https://23052015.github.io/rock-paper-scissors-lizard-spock-online-game/"
+                                        target="_blank">Rock Paper Scissors Lizard Spock online game</a>
                                 </p>
                             </div>
                         </div>
@@ -116,14 +136,19 @@
                     <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
                         <div class="row">
                             <div class="col-2">
-                                <i class="three-reasons-icon fa fa-users" aria-hidden="true"></i>
+                                <i class="three-reasons-icon fa-brands fa-python" aria-hidden="true"></i>
                             </div>
                             <div class="col-10">
-                                <h4 class="three-reasons-heading uppercase">Full Stack NY</h4>
+                                <h4 class="three-reasons-heading uppercase">Python</h4>
                                 <p>
-                                    Our meetup is an event where web designers and developers can come together to learn from and teach each other about emerging technologies. While speakers at Full Stack focus primarily on angularjs, react, node, hapiJS, espress, plain ole' JavaScript,
-                                    HTML, and CSS, we encourage all local web professionals to join us for vivid discussions around technology across the stack in any language.
-                                    <a href="https://www.meetup.com/javascript-full-stack-development/" target="_blank">Full Stack NY</a>
+
+                                    Alle module im Rahmen der Ausbildung als Fullstack Entwickler bei Code Institute.
+                                    Hier habe ich besonders das Kernkonzept von Python studiert. Dazu gehören auch
+                                    Funktionen und Objektorientiertes programmieren aber auch Umgang mit Ausnahmen bzw.
+                                    Fehlermeldungen.
+                                    Die dazugehörigen Bibliotheken gspread, pandas und flask. <br>
+                                    Abschlussprojekt: <a href=https://fleet-management-project.herokuapp.com/
+                                        target="_blank">Fleet Management</a>
                                 </p>
                             </div>
                         </div>
@@ -131,14 +156,15 @@
                     <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
                         <div class="row">
                             <div class="col-2">
-                                <i class="three-reasons-icon fa fa-users" aria-hidden="true"></i>
+                                <i class="three-reasons-icon fa-solid fa-question" aria-hidden="true"></i>
                             </div>
                             <div class="col-10">
-                                <h4 class="three-reasons-heading uppercase">IoT Nation</h4>
+                                <h4 class="three-reasons-heading uppercase">Full Stack Projekt</h4>
                                 <p>
-                                    IoT Nation's mission is to inspire, engage, and connect entrepreneurs, investors, professionals, & enthusiasts worldwide who are active in the Internet of Things (IoT). This group is for professionals and enthusiasts in the Internet of Things. We welcome
-                                    those who want to learn about this emerging field which is fascinating as IoT makes use of a diverse range of technologies and has the promise to impact a vast number of vertical markets.
-                                    <a href="https://www.meetup.com/NYCIOT/" target="_blank">IoT Nation</a>
+
+                                    Kombination sowohl von Back End als auch Front End. Erstellung einer Interaktiven
+                                    Website mit Datenbanken. Sie können sich auch gerne alle meine Projekte und Arbeiten im GitHub button ansehen. <br>
+                                    Abschlussprojekt: In Bearbeitung
                                 </p>
                             </div>
                         </div>
@@ -152,21 +178,20 @@
         <div id="footer-details" class="row">
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">About</h5>
-                <p class="inline-block">Full Stack Web Developer. Skilled in everything from HTML to Heroku. The
-                    capacity for structural and design thinking.</p>
-
+                <p class="inline-block">
+                    Full Stack Web Entwickler. Ich beherrsche alles von HTML bis Heroku.
+                    Strukturiertes Arbeiten und designorientierte Entwicklung gehören zu meinen Charakterzügen.
+                </p>
             </div>
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">Download</h5>
                 <p class="inline-block">
-                    Need a printable version of my CV? Download it here.
+                    Benötigen Sie meinen Lebenslauf im Druckformat? Diesen könnnen Sie hier herunterladen.
                     <a href="assets/cv/sample-cv.pdf" target="_blank" class="cv-pdf">
                         <i class="fa fa-download" aria-hidden="true"></i>
                         <span class="sr-only">Download link.</span>
-
                     </a>
                 </p>
-
             </div>
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">Social</h5>
@@ -208,13 +233,14 @@
                         </a>
                     </li>
                 </ul>
-
             </div>
         </div>
     </footer>
 
 
-    <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
+    <script
+        src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
+    </script>
     <script src="assets/js/maps.js"></script>
 </body>
 
