--- a/contact.html
+++ b/contact.html
@@ -48,14 +48,14 @@
                             </li>
                             <li class="col-6 col-sm-2 ui-menu-color-resume menuitem">
                                 <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap"
-                                        aria-hidden="true"></i><span>Resume</span></a>
+                                        aria-hidden="true"></i><span>Resümee</span></a>
                             </li>
                             <li class="col-6 col-sm-2 ui-menu-color-contact menuitem">
                                 <a href="contact.html" class="hvr-sweep-to-bottom"><i class="fa fa-comment-o"
-                                        aria-hidden="true"></i><span>Contact</span></a>
+                                        aria-hidden="true"></i><span>Kontakt</span></a>
                             </li>
                             <li class="col-6 col-sm-2 ui-menu-color-interests menuitem">
-                                <a href="interests.html" class="hvr-sweep-to-bottom"><i class="fa fa-users" aria-hidden="true"></i><span>Interests</span></a>
+                                <a href="interests.html" class="hvr-sweep-to-bottom"><i class="fa fa-users" aria-hidden="true"></i><span>Ausbildung</span></a>
                             </li>
                             <li class="col-6 col-sm-2 ui-menu-color-github menuitem">
                                 <a href="github.html" class="hvr-sweep-to-bottom"><i class="fa fa-github" aria-hidden="true"></i><span>GitHub</span></a>
@@ -75,14 +75,14 @@
     <section class="container-fluid">
         <div class="rwo bg-color-contact">
             <div class="col">
-                <h3 class="contact-heading uppercase text-center">Got a project in mind?</h3>
-                <h5 class="uppercase text-center">Let's work together</h5>
+                <h3 class="contact-heading uppercase text-center">Möchten Sie mit mir Kontakt aufnehmen?</h3>
+                <h5 class="uppercase text-center">Ich frohe mich auf Ihre Nachricht</h5>
 
                 <div class="center-form">
                   <form onsubmit="return sendMail(this);">
                     <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required>
                     <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required>
-                    <textarea rows="5" name="projectsummary" id="projectsummary" class="form-control" placeholder="Project description"></textarea>
+                    <textarea rows="5" name="projectsummary" id="projectsummary" class="form-control" placeholder="Beschreibung"></textarea>
                     <div class="form-row text-center">
                         <div class="col">
                             <button type="submit" class="btn btn-secondary">Send Project Request</button>
@@ -101,14 +101,14 @@
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">About</h5>
                 <p class="inline-block">
-                    Full Stack Web Developer. Skilled in everything from HTML to Heroku. The capacity for structural and
-                    design thinking.
+                    Full Stack Web Entwickler. Ich beherrsche alles von HTML bis Heroku.
+                    Strukturiertes Arbeiten und designorientierte Entwicklung gehören zu meinen Charakterzügen.
                 </p>
             </div>
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">Download</h5>
                 <p class="inline-block">
-                    Need a printable version of my CV? Download it here.
+                    Benötigen Sie meinen Lebenslauf im Druckformat? Diesen könnnen Sie hier herunterladen.
                     <a href="assets/cv/sample-cv.pdf" target="_blank" class="cv-pdf">
                         <i class="fa fa-download" aria-hidden="true"></i>
                         <span class="sr-only">Download link.</span>
