--- a/index.html
+++ b/index.html
@@ -2,16 +2,15 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
         type="text/css" />
     <script src="https://kit.fontawesome.com/87e547263b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css"
         type="text/css" />
-    <link rel="stylesheet" href="assets/style/style.css" type="text/css">
-
+    <link rel="stylesheet" href="assets/style/style.css" type="text/css" />
 
     <title>Stefan</title>
 </head>
@@ -19,15 +18,13 @@
 <body>
     <header>
         <div class="row no-gutters">
-            <a href="02-index.html" class="col-md-4 logo">
-            </a>
+            <a href="02-index.html" class="col-md-4 logo"> </a>
 
             <div class="col-md-8">
                 <div class="row no-gutters bg-color-name-title">
                     <div class="col heading">
                         <h1 class="name">Stefan Stanisavljevic</h1>
                         <h2 class="title">Full stack Developer</h2>
-
                     </div>
                 </div>
                 <div class="row no-gutters">
@@ -39,28 +36,28 @@
                             </li>
                             <li class="col-xs-6 col-sm-2 ui-menu-color-resume menuitem">
                                 <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap"
-                                        aria-hidden="true"></i><span>Resume</span></a>
+                                        aria-hidden="true"></i><span>Resümee</span></a>
                             </li>
                             <li class="col-xs-6 col-sm-2 ui-menu-color-contact menuitem">
                                 <a href="contact.html" class="hvr-sweep-to-bottom"><i class="fa fa-comment-o"
-                                        aria-hidden="true"></i><span>Contact</span></a>
+                                        aria-hidden="true"></i><span>Kontakt</span></a>
                             </li>
                             <li class="col-xs-6 col-sm-2 ui-menu-color-interests menuitem">
-                                <a href="interests.html" class="hvr-sweep-to-bottom"><i class="fa fa-users" aria-hidden="true"></i><span>Interests</span></a>
+                                <a href="interests.html" class="hvr-sweep-to-bottom"><i class="fa fa-users"
+                                        aria-hidden="true"></i><span>Ausbildung</span></a>
                             </li>
                             <li class="col-xs-6 col-sm-2 ui-menu-color-github menuitem">
-                                <a href="github.html" class="hvr-sweep-to-bottom"><i class="fa fa-github" aria-hidden="true"></i><span>GitHub</span></a>
+                                <a href="github.html" class="hvr-sweep-to-bottom"><i class="fa fa-github"
+                                        aria-hidden="true"></i><span>GitHub</span></a>
                             </li>
                             <li class="col-xs-6 col-sm-2 ui-menu-color-download menuitem">
-                                <a href="assets/cv/sample-cv.pdf" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-download"
-                                        aria-hidden="true"></i><span>Download</span></a>
+                                <a href="assets/cv/sample-cv.pdf" target="_blank" class="hvr-sweep-to-bottom"><i
+                                        class="fa fa-download" aria-hidden="true"></i><span>Download</span></a>
                             </li>
-
                         </ul>
                     </div>
                 </div>
             </div>
-
         </div>
     </header>
     <section class="container-fluid">
@@ -68,64 +65,46 @@
             <div class="col-md-4 bg-color-personal-info section-column">
                 <div class="row">
                     <div class="col-12">
-                        <h3 class="section-heading uppercase">
-                            Personal Info
-                        </h3>
+                        <h3 class="section-heading uppercase">Persönliche Informationen</h3>
                     </div>
                 </div>
                 <div class="personal-info-item">
                     <div class="key">
-                        <p class="uppercase">
-                            Name:
-                        </p>
+                        <p class="uppercase">Name:</p>
                     </div>
                     <div class="value">
-                        <p>
-                            Stefan Stanisavljevic
-                        </p>
+                        <p>Stefan Stanisavljevic</p>
                     </div>
                 </div>
                 <div class="personal-info-item">
                     <div class="key">
-                        <p class="uppercase">
-                            Address:
-                        </p>
+                        <p class="uppercase">Adresse</p>
                     </div>
                     <div class="value">
-                        <p>
-                            Upon request/Vienna, Austria
-                        </p>
+                        <p>Auf Anfrage/Wien Österreich</p>
                     </div>
                 </div>
                 <div class="personal-info-item">
                     <div class="key">
-                        <p class="uppercase">
-                            Phone:
-                        </p>
+                        <p class="uppercase">Telefon</p>
                     </div>
                     <div class="value">
-                        <p>
-                            Upon request
-                        </p>
+                        <p>Auf Anfrage</p>
                     </div>
                 </div>
                 <div class="personal-info-item">
                     <div class="key">
-                        <p class="uppercase">
-                            Email:
-                        </p>
+                        <p class="uppercase">Email:</p>
                     </div>
                     <div class="value">
-                        <p>
-                            Upon request
-                        </p>
+                        <p>Auf Anfrage</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-8 bg-color-three-reasons section-column">
                 <div class="row">
                     <div class="col">
-                        <h3 class="section-heading uppercase">About me</h3>
+                        <h3 class="section-heading uppercase">Über mich</h3>
                     </div>
                 </div>
                 <div class="row">
@@ -135,15 +114,14 @@
                                 <i class="three-reasons-icon fa fa-question" aria-hidden="true"></i>
                             </div>
                             <div class="col-10">
-                                <h4 class="three-reasons-heading uppercase">What do I do?</h4>
+                                <h4 class="three-reasons-heading uppercase">Was bin ich?</h4>
                                 <p>
-                                    I'm a skilled Full Stack Developer with a wealth of diverse life and technical
-                                    experience that I bring to every project.
+                                    Ich bin ein Full Stack Entwickler in der Ausbildungsphase.
+                                    Momentan bin ich als Sachbearbeiter und Kundebetreuer bei
+                                    der Megadrive/Buchbinder Autovermietung tätig.
                                 </p>
-
                             </div>
                         </div>
-
                     </div>
                     <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
                         <div class="row">
@@ -151,11 +129,14 @@
                                 <i class="three-reasons-icon fa fa-thumbs-up" aria-hidden="true"></i>
                             </div>
                             <div class="col-10">
-                                <h4 class="three-reasons-heading uppercase">How do I do it?</h4>
+                                <h4 class="three-reasons-heading uppercase">
+                                    Wie mache ich es?
+                                </h4>
                                 <p>
-                                    I follow form as well as function. I know that the aesthetics of effective design
-                                    combined with application speed, security and reliability combine to create a great
-                                    user experience.
+                                    Ich folge sowohl der Form als auch der Funktion im Web
+                                    Design. Mir ist es bewusst dass die Ästhetik,
+                                    Geschwindigkeit, Sicherheit und Zuverlässigkeit
+                                    zusamenarbeiten müssen um ein gutes UX prudzieren zu können
                                 </p>
                             </div>
                         </div>
@@ -166,40 +147,38 @@
                                 <i class="three-reasons-icon fa fa-bolt" aria-hidden="true"></i>
                             </div>
                             <div class="col-10">
-                                <h4 class="three-reasons-heading uppercase">Why hire me?</h4>
+                                <h4 class="three-reasons-heading uppercase">Warum mich einstellen?</h4>
                                 <p>
-                                    I work quickly and effectively in getting things built and working across the stack.
-                                    I'm an excellent communicator who thrives in bright and enthusiastic teams and I'm
-                                    also a self starter when working solo.
+                                    Ich arbeite schnell und effektiv um meinen Code aufzubauen.
+                                    Die Arbeit im Team macht mir genausoviel Spaß wie auch aleine
+                                    nach Lösungen für die alltäglichen Herausforderungen zu
+                                    forschen.
                                 </p>
                             </div>
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
-
     </section>
     <footer class="container-fluid">
         <div id="footer-details" class="row">
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">About</h5>
-                <p class="inline-block">Full Stack Web Developer. Skilled in everything from HTML to Heroku. The
-                    capacity for structural and design thinking.</p>
-
+                <p class="inline-block">
+                    Full Stack Web Entwickler. Ich beherrsche alles von HTML bis Heroku.
+                    Strukturiertes Arbeiten und designorientierte Entwicklung gehören zu meinen Charakterzügen .
+                </p>
             </div>
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">Download</h5>
                 <p class="inline-block">
-                    Need a printable version of my CV? Download it here.
+                    Benötigen Sie meinen Lebenslauf im Druckformat? Diesen könnnen Sie hier herunterladen.
                     <a href="assets/cv/sample-cv.pdf" target="_blank" class="cv-pdf">
                         <i class="fa fa-download" aria-hidden="true"></i>
                         <span class="sr-only">Download link.</span>
-
                     </a>
                 </p>
-
             </div>
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">Social</h5>
@@ -241,7 +220,6 @@
                         </a>
                     </li>
                 </ul>
-
             </div>
         </div>
     </footer>
