--- a/resume.html
+++ b/resume.html
@@ -39,21 +39,23 @@
                             </li>
                             <li class="col-6 col-sm-2 ui-menu-color-resume menuitem">
                                 <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap"
-                                        aria-hidden="true"></i><span>Resume</span></a>
+                                        aria-hidden="true"></i><span>Resümee</span></a>
                             </li>
                             <li class="col-6 col-sm-2 ui-menu-color-contact menuitem">
                                 <a href="contact.html" class="hvr-sweep-to-bottom"><i class="fa fa-comment-o"
-                                        aria-hidden="true"></i><span>Contact</span></a>
+                                        aria-hidden="true"></i><span>Kontakt</span></a>
                             </li>
                             <li class="col-6 col-sm-2 ui-menu-color-interests menuitem">
-                                <a href="interests.html" class="hvr-sweep-to-bottom"><i class="fa fa-users" aria-hidden="true"></i><span>Interests</span></a>
+                                <a href="interests.html" class="hvr-sweep-to-bottom"><i class="fa fa-users"
+                                        aria-hidden="true"></i><span>Ausbildung</span></a>
                             </li>
                             <li class="col-6 col-sm-2 ui-menu-color-github menuitem">
-                                <a href="github.html" class="hvr-sweep-to-bottom"><i class="fa fa-github" aria-hidden="true"></i><span>GitHub</span></a>
+                                <a href="github.html" class="hvr-sweep-to-bottom"><i class="fa fa-github"
+                                        aria-hidden="true"></i><span>GitHub</span></a>
                             </li>
                             <li class="col-6 col-sm-2 ui-menu-color-download menuitem">
-                                <a href="assets/cv/sample-cv.pdf" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-download"
-                                        aria-hidden="true"></i><span>Download</span></a>
+                                <a href="assets/cv/sample-cv.pdf" target="_blank" class="hvr-sweep-to-bottom"><i
+                                        class="fa fa-download" aria-hidden="true"></i><span>Download</span></a>
                             </li>
 
                         </ul>
@@ -69,32 +71,33 @@
                 <div class="row">
                     <div class="col-12">
                         <h3 class="history-heading uppercase">
-                            Work History
+                            Beruflicher Werdegang
                         </h3>
                     </div>
                 </div>
-                <div class="timeline-item" data-dates="02/1998 - 04/2004">
-                    <h4>National College of Art and Design (NCAD)</h4>
-                    <p>Sculptor in residence</p>
+                <div class="timeline-item" data-dates="02/2014 - 06/2014">
+                    <h4>McDonalds Zinnersgasse 1110 Wien </h4>
+                    <p>Kassa und Verkauf/Teilzeit neben Studium </p>
                 </div>
-                <div class="timeline-item" data-dates="04/2004 - 06/2008">
-                    <h4>Fisher and Diaz Funeral Directors</h4>
-                    <p>Junior Embalmer</p>
+                <div class="timeline-item" data-dates="10/2015 - 10/2016">
+                    <h4>Hertz Autovermietung Flughafen Wien, Schwechat</h4>
+                    <p>Fahrer/ gerfingfügig neben Studium</p>
                 </div>
-                <div class="timeline-item" data-dates="06/2008 - 06/2011">
-                    <h4>Phantom Design Inc. Dublin</h4>
-                    <p>Junior Front End Developer</p>
+                <div class="timeline-item" data-dates="10/2016 - 01/2019">
+                    <h4>Buchbinder/Megadrive Autovermietung Flughafen Wien, Schwechat</h4>
+                    <p>Rental Sales Agent/Vollzeit</p>
                 </div>
-                <div class="timeline-item" data-dates="06/2011 - Present">
-                    <h4>Hooli Inc. Silicon Valley</h4>
-                    <p>Full Stack Web Developer</p>
+                <div class="timeline-item" data-dates="11/2019 - jetzt">
+                    <h4>Buchbinder/Megadrive Autovermietung Wien Zentrale</h4>
+                    <p>Sachbearbeiter, Schadensabwicklung, Kundenbetreuung und Disposition</p>
                 </div>
+
             </div>
 
             <div class="col-md-8 bg-color-three-reasons section-column">
                 <div class="row">
                     <div class="col">
-                        <h3 class="section-heading uppercase">My Skills</h3>
+                        <h3 class="section-heading uppercase">Meine Fähigkeiten</h3>
                     </div>
                 </div>
                 <div class="row">
@@ -106,7 +109,9 @@
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">Front End</h4>
                                 <p>
-                                    I'm skilled in User Experience Design using the trinity of HTML/CSS/Javascript. I also have extensive experience in Front End Frameworks such as Angular and React
+                                    Ich konnte während meiner Ausbildung bei Code Institute viel Erfahrung im Bereich UX
+                                    sammeln. Die Sprachen welche ich im Front End beherrsche sind HTML5, CSS und
+                                    JavaScript.
                                 </p>
                             </div>
                         </div>
@@ -119,7 +124,9 @@
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">Back End</h4>
                                 <p>
-                                    I specialize in data-driven web applications. Many of my projects utilise document-based data. I use Python and Django in conjunction with MongoDB to process and present information.
+                                    Ich bin auf datengetriebene Webanwendungen spezialisiert. Viele meiner Projekte
+                                    verwenden verschieden Datenbanken. Im Backend verwende ich Python und Django in
+                                    Verbindung mit MongoDB.
                                 </p>
                             </div>
                         </div>
@@ -128,31 +135,36 @@
                 <div class="row progress-section">
                     <div class="col">
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%;">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0"
+                                aria-valuemax="100" style="width:90%;">
                                 <span class="sr-only">90% complete</span>
                             </div>
                             <span class="progress-type">HTML / HTML5</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
+                            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0"
+                                aria-valuemax="100" style="width:80%;">
                                 <span class="sr-only">80% complete</span>
                             </div>
                             <span class="progress-type">CSS / CSS3</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%;">
+                            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+                                aria-valuemax="100" style="width:70%;">
                                 <span class="sr-only">70% complete</span>
                             </div>
                             <span class="progress-type">JavaScript / jQuery</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
+                            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0"
+                                aria-valuemax="100" style="width:80%;">
                                 <span class="sr-only">80% complete</span>
                             </div>
                             <span class="progress-type">Django / Python</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
+                            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0"
+                                aria-valuemax="100" style="width:80%;">
                                 <span class="sr-only">80% complete</span>
                             </div>
                             <span class="progress-type">SQL / NoSQL</span>
@@ -161,20 +173,21 @@
                 </div>
             </div>
         </div>
-        
+
     </section>
     <footer class="container-fluid">
         <div id="footer-details" class="row">
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">About</h5>
                 <p class="inline-block">
-                    Full Stack Web Developer. Skilled in everything from HTML to Heroku. The capacity for structural and design thinking.
+                    Full Stack Web Entwickler. Ich beherrsche alles von HTML bis Heroku.
+                    Strukturiertes Arbeiten und designorientierte Entwicklung gehören zu meinen Charakterzügen .
                 </p>
             </div>
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">Download</h5>
                 <p class="inline-block">
-                    Need a printable version of my CV? Download it here.
+                    Benötigen Sie meinen Lebenslauf im Druckformat? Diesen könnnen Sie hier herunterladen.
                     <a href="assets/cv/sample-cv.pdf" target="_blank" class="cv-pdf">
                         <i class="fa fa-download" aria-hidden="true"></i>
                         <span class="sr-only">Download link.</span>
@@ -225,4 +238,5 @@
         </div>
     </footer>
 </body>
+
 </html>
