--- a/interests.html
+++ b/interests.html
@@ -163,7 +163,7 @@
                                 <p>
 
                                     Kombination sowohl von Back End als auch Front End. Erstellung einer Interaktiven
-                                    Website mit Datenbanken. Sie können sich auch gerne alle meine Projekte und Arbeiten im GitHub button ansehen. <br>
+                                    Website mit Django framework. Sie können sich auch gerne alle meine Projekte und Arbeiten im GitHub button ansehen. <br>
                                     Abschlussprojekt: In Bearbeitung
                                 </p>
                             </div>
@@ -197,7 +197,7 @@
                 <h5 class="uppercase general-sub">Social</h5>
                 <ul class="list-inline social-links">
                     <li class="list-inline-item">
-                        <a target="_blank" href="#">
+                        <a target="_blank" href="https://www.facebook.com/">
                             <i class="fa fa-facebook" aria-hidden="true"></i>
                             <span class="sr-only">Facebook</span>
                         </a>
